--- a/package.json
+++ b/package.json
@@ -9,10 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/drawer": "^5.12.5",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.0",
     "expo": "~46.0.9",
+    "expo-font": "~10.2.0",
+    "expo-linear-gradient": "~11.4.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-dom": "18.0.0",
+    "react-native": "0.69.5",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-web": "~0.18.7",
+    "react-redux": "7.2.6",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
