--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.0",
+    "@reduxjs/toolkit": "^1.8.5",
     "expo": "~46.0.9",
     "expo-font": "~10.2.0",
     "expo-linear-gradient": "~11.4.0",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
@@ -25,7 +27,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
-    "react-redux": "7.2.6",
+    "react-redux": "8.0.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1"
   },
